	rhs of the formula: that this happens is now documented on its
	help page.

    o	New option `locatorBell' to control the confirmation beep
	during the use of locator() and identify().

    o	New option("scipen") provides some user control over the
	printing of numbers in fixed-point or exponential notation.
	(Contributed by David Brahm.)

    o	polygon() and rect() now interpret density < 0 or NA to mean
	filling (by colour) is desired: this allows filling and
	shading to be mixed in one call, e.g. from legend().

    o	The predict() methods for classes lm, glm, mlm and lqs take a
	`na.action' argument that controls how missing values in
	`newdata' are handled (and defaults to predicting NA).
	[Previously the value of getOption("na.action") was used and
	this by default omitted cases with missing values, even if set
	to `na.exclude'.]

    o	print.summary.glm() now reports omitted coefficients in the
	same way as print.summary.lm(), and both show them as NAs in
	the table of coefficients.

    o	read.table()'s 'as.is' argument can be character, naming columns
	not to be converted.

    o	rep() is now a generic function, with default, POSIXct and
	POSIXlt methods.  For efficiency, the base code uses rep.int()
	rather than rep() where possible.

    o	New function replicate() for repeated evaluation of expression
	and collection of results, wrapping a common use of sapply()
	for simulation purposes.

    o	sort(method = "quick", decreasing = TRUE) is now implemented.

    o	sort.list() has methods "quick" (a wrapper for sort(method =
	"quick", index.return = TRUE) and "radix" (a very fast method
	for small integers).  The default "shell" method works faster
	on long vectors with many ties.

    o	stripchart() now has `log', `add' and `at' arguments.

    o	strsplit(x, *) now preserves names() but won't work for
	non-character `x' anymore {formerly used as.character(x),
	destroying names(x)}.

    o	Using UseMethod() with more than two arguments now gives a